deplacement des personnages en cours + mise a jour du jeux